# Project-AI-makerspace

./: .env.example  .gitignore  02_Financial_Advisor_RAG.ipynb  CLAUDE.md  DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  README.md  TASK_1_Problem_Definition.md  TASK_2_Solution_Design.md  TASK_3_Data_Strategy.md  TASK_4_BUILD.md  TASK_5_EVALUATION.md  TASK_6_ADVANCED_RETRIEVAL.md  TASK_7_REFLECTION.md  backend_main.py  frontend_app.tsx  frontend_package.json  pyproject.toml  render.yaml  requirements.txt  requirements_no_hash.txt  sync-deps.bat  tax_slab_2025.xlsx
Challenge_Docs/: Challenge_README.md
eval/: dataset.json  run_eval.py
eval/results/: baseline_report.md  baseline_results.json  eval_report.md  eval_results.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
